# allocators

./: AndreiAllocators.sln  CMakeLists.txt
AndreiAllocators/: AndreiAllocators.vcxproj  AndreiAllocators.vcxproj.filters  bucket_allocator.hpp  cuda_allocator.hpp  cuda_freelist_allocator.hpp  fallback_allocator.hpp  freelist_allocator.hpp  null_allocator.hpp  pool_allocator.hpp  segregator.hpp  stack_allocator.hpp
examples/: segregated_stack_allocator_test.cpp
include/allocators/: blk.hpp  bucket_allocator.hpp  cascading_allocator.hpp  cuda_allocator.hpp  cuda_freelist_allocator.hpp  fallback_allocator.hpp  malloc_allocator.hpp  null_allocator.hpp  segregated_freelist_allocator.hpp  segregator.hpp  stack_allocator.hpp
src/: CMakeLists.txt  blk.hpp  bucket_allocator.hpp  cuda_allocator.hpp  cuda_freelist_allocator.hpp  freelist_allocator.hpp  high_res_clock.hpp  main.cpp  malloc_allocator.hpp  pool_allocator.hpp  stack_allocator.hpp
test/: CMakeLists.txt  main.cpp  segregated_freelist_allocator_test.cpp
